Fix new line (#27)
* fix like/dislike issue when u logout

* fix like/dislike in comment

* add truncation

* redbackend validation restored

* handle email uniqueness

* fix new line issue

--- a/static/styles.css
+++ b/static/styles.css
@@ -518,6 +518,16 @@ form.inline {
   line-height: 1.6;
   font-weight: 400;
   max-height: 40vh;
+  white-space: pre-line;
+}
+
+.read-more {
+  color: #7b22f0;
+  font-weight: bold;
+}
+
+.read-more:hover {
+  color: #5f1eb3;
 }
 
 .read-more {
